--- a/wrappers/cnvkit/env.yaml
+++ b/wrappers/cnvkit/env.yaml
@@ -3,8 +3,8 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - cnvkit=0.9.9
-  - openssl=1.0
+  - bioconda::cnvkit=0.9.12
+  - openssl
   - r-base
   - bioconda::bioconductor-dnacopy
   - conda-forge::pomegranate
