--- a/wrappers/prepare_exomeDepth/env.yaml
+++ b/wrappers/prepare_exomeDepth/env.yaml
@@ -7,4 +7,5 @@ dependencies:
   - bioconda::bioconductor-genomicranges
   - r-base
   - r-data.table
-
+  - conda-forge::r-aod
+  - conda-forge::r-vgam
