--- a/wrappers/cnvWholeMerge/env.yaml
+++ b/wrappers/cnvWholeMerge/env.yaml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - r-base
-  - r-data.table
+  - r-data.table> 1.17.0
   - bioconductor-rtracklayer
+  - bioconductor-genomicranges
 
